2009-01-23 Borut Razem <borut.razem AT siol.net>

	* as/link/lkar.h: changed type of ar_size to size_t to make it work on
	  ppc Mac OS X (off_t is 64 bit and is not converted to 32 bit
	  unsigned int when calling new(), since asxxxx doesn't use function
	  prototypes)

2009-01-21 Borut Razem <borut.razem AT siol.net>

	* as/link/lkar.h: sgetl and sputl are independent of endianness
	* as/link/sdxxxx_config.h.in: removed endianness detection

2009-01-20 Borut Razem <borut.razem AT siol.net>

	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.8
	  due creation of ar format libraries
	* support/scripts/sdcc.nsi:
	  don't add nonexistent object files to the package

2009-01-19 Borut Razem <borut.razem AT siol.net>

	* Makefile.in, configure.in, configure,
	  device/lib/Makefile.in, device/lib/ds390/Makefile.in,
	  device/lib/ds400/Makefile.in, device/lib/gbz80/Makefile.in,
	  device/lib/hc08/Makefile.in, device/lib/large/Makefile.in,
	  device/lib/mcs51/Makefile.in, device/lib/medium/Makefile.in,
	  device/lib/small/Makefile.in,
	  device/lib/z80/Makefile.in: create ar format libraries
	* support/regression/ports/mcs51-xstack-auto/spec.mk:
	  use device/lib/Makefile to create library
	* support/regression/tests/snprintf.c:
	  floating point is not enabled in small-xstack-auto library
	* device/lib/libfloat.lib, device/lib/libint.lib,
	  device/lib/liblong.lib, device/lib/libsdcc.lib: removed

2009-01-18 Borut Razem <borut.razem AT siol.net>

	* support/cpp/auto-host.h: fixed warning: "__STDC__" redefined,
	  warning: extra tokens at end of #endif directive

2009-01-11 Borut Razem <borut.razem AT siol.net>

	* Makefile.in: added SDCC_ASRANLIB to PKGS

2009-01-10 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added asranlib.exe to the install package
	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.7
	  due added support for ar format libraries

2009-01-09 Borut Razem <borut.razem AT siol.net>
